# sitemapr

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
sitemapr/: __init__.py  cli.py  core.py  exceptions.py  models.py
tests/: test_core.py
