[tool.poetry]
name = "sitemapr"
version = "0.3.2"
description = "sitemapr is a library that generates sitemaps for SPA websites with declaritve configuration in Python."
authors = ["sjquant <seonujang92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.2"
pydantic = "^2.6.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pyright = "^1.1.351"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true
exclude = [
    '*.pyi',
    "site-packages",
    ".mypy_cache",
    ".ruff_cache",
]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pyright]
include = ["sitemapr", "tests"]
exclude = [
    "**/__pycache__"
]
pythonVersion = "3.10"
typeCheckingMode = "strict"